[gd_scene load_steps=9 format=3 uid="uid://bqr1fgqvonk35"]

[ext_resource type="Script" path="res://Scripts/other/NameSelect.gd" id="1_dfhc4"]
[ext_resource type="Texture2D" uid="uid://ce370ndac3n7n" path="res://Assets/Sprites/Other/cigarGalaxy.jpg" id="2_cgruu"]
[ext_resource type="Script" path="res://Scripts/other/setName.gd" id="3_bcpf2"]
[ext_resource type="AudioStream" uid="uid://d75kq3glrqq3" path="res://Assets/Sound/SoundEffects/selectThing.wav" id="4_35s4d"]
[ext_resource type="AudioStream" uid="uid://brga7ic1u5y82" path="res://Assets/Sound/SoundEffects/CantBuy.wav" id="5_b6w3w"]
[ext_resource type="AudioStream" uid="uid://dwng710ec8dfr" path="res://Assets/Sound/SoundEffects/dartBoard.wav" id="6_ocmqb"]

[sub_resource type="SystemFont" id="SystemFont_xsv57"]
font_names = PackedStringArray("Vollkorn")

[sub_resource type="SystemFont" id="SystemFont_qgsds"]
font_names = PackedStringArray("Handlee")

[node name="NameSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dfhc4")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1349.0
offset_top = -756.0
offset_right = 1339.0
offset_bottom = 756.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cgruu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_fonts/font = SubResource("SystemFont_xsv57")
theme_override_font_sizes/font_size = 100
text = "Enter Username"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 50
placeholder_text = "Enter Name Here..."
alignment = 1
secret_character = ""
script = ExtResource("3_bcpf2")

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_qgsds")
theme_override_font_sizes/font_size = 40
text = "Done"

[node name="Select" type="AudioStreamPlayer2D" parent="."]
position = Vector2(579, 335)
stream = ExtResource("6_ocmqb")

[node name="NotLongEnough" type="AudioStreamPlayer2D" parent="."]
position = Vector2(579, 335)
stream = ExtResource("5_b6w3w")

[node name="MouseOver" type="AudioStreamPlayer2D" parent="."]
position = Vector2(579, 335)
stream = ExtResource("4_35s4d")

[connection signal="mouse_entered" from="MarginContainer/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
